# bt

./: .gitignore  .gitlab-ci.yml  Build.hs  README.md  bt.cabal  build.sh  stack.yaml  task-description.md  toc.md
defence/: presentation.pptx
defence/code/: an-example.clj  fetches.clj  inlined-1.clj  inlined-2.clj
defence/code-out/: an-example.html  an-example.rtf
defence/graphs/: batching-after-with-if-resolved.graffle  batching-after-with-if.graffle  batching-after.graffle  batching-before.graffle  complete-program-graph-labeled.graffle  complete-program-graph.graffle  context-comparison.graffle  context-unwinding.graffle  if-after-labeled.graffle  if-before-labeled.graffle  if-original.graffle  io-only.graffle  map-before-labeled.graffle  maps-after-labeled.graffle  maps-after-unmap-labeled.graffle  maps-after-unmap.graffle  maps-after.graffle  maps-before.graffle  maps-exploded-after.graffle  maps-exploded-fetch-only.graffle  maps-exploded-trivial-after.graffle  maps-exploded-trivial-before.graffle  maps-exploded.graffle  (+7 more)
hsrc/: Build.hs
midway-presentation/: build.sh  deploy.sh  presentation.md  presentation.tex  style.css  template.html  toc.md
plotting/: HaskellChart.hs  haskell-func.json  haskell-if-delayed.json  haskell-if.json  haskell-map-primer.json  haskell-map.json  haskell-vanilla.json  yauhau-func-monad.json  yauhau-if-app.json  yauhau-if-delayed-monad.json  yauhau-if-monad-old.json  yauhau-if-monad.json  yauhau-map-monad.json  yauhau-map-primer-monad.json  yauhau-vanilla-monad.json
src/: MastersDoctoralThesis.cls  main.bib  thesis.tex
(+72 files in other folders)
