name:                bt
version:             1.0
synopsis:            Builder for my Bachelors thesis
-- description:
-- license:
-- license-file:        LICENSE
author:              Justus Adam
maintainer:          dev@justus.science
copyright:           (C) 2016 Justus Adam
-- category:
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable bt
  main-is:             Build.hs
  -- other-extensions:
  build-depends:       base >=4.8 && <4.9
                     , shake >=0.15 && <0.16
                     , Chart
                     , Chart-diagrams
                     , aeson
                     , classy-prelude
                     , haxl-test-generated-graph
                     , statistics
  ghc-options:         -rtsopts -with-rtsopts=-I0
  hs-source-dirs:      hsrc, plotting
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                     , TupleSections
                     , LambdaCase
                     , TypeFamilies
                     , OverloadedStrings
